[package]
name = "twizzler-abi"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[dependencies]
bitflags = "2.4.1"
bitset-core = { version = "0.1", optional = true, default-features = false }
cfg-if = "1.0"
num_enum = { version = "0.7", default-features = false }
thiserror = { package = "thiserror-no-std", version = "2.0", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
twizzler-rt-abi = { version = "0.99", default-features = false }
static_assertions = "1"

[dependencies.volatile]
optional = true
version = "0.6"

[features]
# Activate if compiling for the kernel.
kernel = ["volatile"]

[dev-dependencies]
#twizzler-runtime = { path = "../../runtime/rt" }
