[package]
name = "twizzler-abi"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[dependencies]
bitflags = "2.4.1"
bitset-core = { workspace = true, optional = true }
cfg-if = { workspace = true }
num_enum = { workspace = true }
thiserror = { package = "thiserror-no-std", version = "2.0", default-features = false }
lazy_static = { workspace = true, features = ["spin_no_std"] }
twizzler-rt-abi = { version = "0.99", default-features = false }
static_assertions = { workspace = true }
volatile= { workspace = true, optional = true }

[features]
# Activate if compiling for the kernel.
kernel = ["volatile"]

[dev-dependencies]
#twizzler-runtime = { path = "../../runtime/rt" }
