[package]
name = "twizzler-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = {path="../twizzler-abi"}
lazy_static = "1.4.0"
stable-vec = "0.4.0"
async-task = "3.0.0"
scoped-tls-hkt = "0.1.2"
futures-util = "0.3.21"