[package]
name = "twizzler-display"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
secgate = { workspace = true }
twizzler-runtime = { workspace = true }
twizzler-rt-abi = "0.99"
twizzler = { path = "../../lib/twizzler" }
twizzler-abi = { path = "../../lib/twizzler-abi" }
