[package]
name = "twizzler-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-object = { path = "../twizzler-object" }
twizzler-abi = { path = "../twizzler-abi" }
twizzler-async = { path = "../twizzler-async" }
futures = "0.3.21"
async-trait = "0.1.56"
bitflags = "1.3.2"
volatile = { version = "0.5", features = ["unstable"] }
