[package]
name = "twizzler-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../twizzler-abi" }
futures = "0.3.21"
async-trait = "0.1.56"
bitflags = "2.4.1"
volatile = { version = "0.6", features = ["unstable"] }
async-io = "*"
twizzler-futures = { path = "../twizzler-futures" }
twizzler = { path = "../twizzler" }
twizzler-rt-abi = { path = "../../abi/rt-abi" }
