[package]
name = "twizzler-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../twizzler-abi" }
futures = { workspace = true }
async-trait = { workspace = true }
bitflags = "2.4.1"
volatile = { version = "0.6", features = ["unstable"] }
async-io = { workspace = true }
twizzler-futures = { workspace = true }
twizzler = { workspace = true }
twizzler-rt-abi = { path = "../../abi/rt-abi" }
