[package]
name = "twizzler-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-object = {path = "../twizzler-object"}
twizzler-abi = {path = "../twizzler-abi"}
twizzler-async = {path="../twizzler-async"}
twizzler-queue = {path="../twizzler-queue"}
bitflags = "1.3.2"

[features]
manager = []