[package]
name = "twizzler-object"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
description = "Twizzler bindings for interacting with objects."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../twizzler-abi" }
bitflags = "1.3.2"
lazy_static = "1.4.0"
twizzler-runtime-api = { path = "../twizzler-runtime-api" }
