[package]
name = "twizzler-queue-raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
twizzler-abi = { path = "../twizzler-abi", version = "*" }

[features]
std = []
default = ["std"]
