[package]
name = "twizzler-queue"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-queue-raw = { path = "../twizzler-queue-raw" }
twizzler-async = { path = "../twizzler-async" }
twizzler-abi = { path = "../twizzler-abi" }
twizzler = { path = "../twizzler" }