[package]
name = "twizzler-runtime-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"

[dependencies.compiler_builtins]
optional = true
version = "0.1"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins/rustc-dep-of-std",
    "bitflags/rustc-dep-of-std",
]
default = ["runtime"]
runtime = []
kernel = []

[dev-dependencies]
twizzler-abi = { path = "../twizzler-abi", features = ["runtime"]}