[package]
name = "twizzler-security"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
sha2 = { workspace = true, features = ["force-soft"] }
p256 = { workspace = true, features = ["ecdsa"] }
getrandom = { workspace = true, optional = true }

blake3 = { workspace = true, features = ["traits-preview", "no_neon"] }

twizzler-abi = { path = "../twizzler-abi"}
twizzler = { workspace = true, optional = true }
twizzler-rt-abi = {version = "0.99", default-features = false}
log = { workspace = true, optional = true }
heapless = "0.8.0"

[features]
default = ["user"]
# kernel = ["twizzler-abi/kernel", "dep:twizzler-rt-abi", "twizzler-rt-abi/kernel"]
kernel = ["twizzler-abi/kernel", "twizzler-rt-abi/kernel"]
# user = ["dep:twizzler", "dep:twizzler-rt-abi"]
user = ["dep:twizzler","dep:getrandom"]
log = ["dep:log"]
