[package]
name = "twizzler"
version = "0.99.0"
edition = "2021"

[dependencies]
bitflags = "2"
thiserror = "2"
rand = "0.9.0"
twizzler-rt-abi = "0.99"
twizzler-abi = { path = "../../lib/twizzler-abi" }
monitor-api = { path = "../../rt/monitor-api" }
secgate = { path = "../../lib/secgate" }
tracing = "*"
foldhash = { version = "0.1.2", default-features = false }
equivalent = "1.0.2"
twizzler-derive = { path = "twizzler-derive" }
rand_chacha = "0.9.0"
