[package]
name = "twizzler"
version = "0.99.0"
edition = "2021"

[dependencies]
bitflags = "2"
thiserror = { workspace = true }
rand = "0.9.0"
twizzler-rt-abi = "0.99"
tracing = { workspace = true }
equivalent = { workspace = true }
twizzler-derive = { workspace = true }
rand_chacha = { workspace = true }
ahash = { workspace = true }
