[package]
name = "virtio-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
twizzler-driver = { workspace = true }
twizzler-abi = { path = "../../lib/twizzler-abi" }
devmgr = { workspace = true }
virtio-drivers = { workspace = true }
volatile = { workspace = true, features = ["unstable"] }
once_cell = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }
