[package]
name = "virtio-net"
version = "0.1.0"
edition = "2021"

[dependencies]
twizzler-driver = { path = "../../lib/twizzler-driver" }
twizzler-abi = { path = "../../lib/twizzler-abi" }

virtio-drivers = "0.7.5"
volatile = { version = "0.5", features = ["unstable"] }
once_cell = "1.19.0"

[dependencies.smoltcp]
version = "0.11.0"
optional = false
default-features = true
features = [
    "alloc",
    "log",
    "medium-ethernet",
    "proto-ipv4",
    "socket-raw",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
]
