[package]
name = "twizzler-minruntime"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bitflags = "2.4.1"
talc = { version = "3.0", default-features = false }
bitset-core = { version = "0.1", default-features = false }
cfg-if = "1.0"
num_enum = { version = "0.7", default-features = false }
thiserror = { package = "thiserror-no-std", version = "2.0", default-features = false }
stable-vec = "0.4.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
lru = "0.12.4"
twizzler-rt-abi = "0.99"
twizzler-abi = { path = "../../lib/twizzler-abi" }
static_assertions = "1"
paste = "1"
printf-compat = { version = "0.1", default-features = false }
spin = "*"

[package.metadata]
twizzler-build = "static"

[features]
default = ["std"]
std = []
