[package]
name = "twizzler-minruntime"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bitflags = "2.4.1"
talc = { workspace = true }
bitset-core = { workspace = true }
cfg-if = { workspace = true }
num_enum = { workspace = true }
thiserror = { package = "thiserror-no-std", version = "2.0", default-features = false }
stable-vec = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
lru = { workspace = true }
twizzler-rt-abi = "0.99"
twizzler-abi = { path = "../../lib/twizzler-abi" }
static_assertions = { workspace = true }
paste = "1"
printf-compat = { workspace = true }
spin = { workspace = true }

[package.metadata]
twizzler-build = "static"

[features]
default = ["std"]
std = []
