[package]
name = "monitor-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-rt-abi = "0.99"
twizzler-abi = { path = "../../lib/twizzler-abi" }
secgate = { path = "../../lib/secgate" }
dynlink = { path = "../../lib/dynlink" }
bitflags = "2"
