[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
twizzler-rt-abi = "0.99"
dynlink = { path = "../../lib/dynlink" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
twizzler-runtime = { path = "../" }
miette = "7.5"
secgate = { path = "../../lib/secgate" }
monitor-api = { path = "../monitor-api" }
static_assertions = "1.1"
lazy_static = "1.4"
talc = "4.4"
happylock = "0.5.0"
parking_lot = "*"
naming-core = { path = "../../lib/naming/naming-core/" }
tinyvec = { version = "*", features = ["alloc"] }
smallstr = "*"

[features]
secgate-impl = []
default = ["secgate-impl"]
