[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
twizzler-rt-abi = "0.99"
dynlink = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twizzler-runtime = { workspace = true }
miette = { workspace = true }
secgate = { workspace = true }
monitor-api = { workspace = true }
static_assertions = { workspace = true }
lazy_static = { workspace = true }
talc = { workspace = true }
happylock = { workspace = true }
parking_lot = { workspace = true }
naming-core = { workspace = true }
tinyvec = { workspace = true, features = ["alloc"] }
smallstr = { workspace = true }
twizzler-security = {path = "../../lib/twizzler-security", features = ["user"]}
bitflags = "2"

[features]
secgate-impl = []
default = ["secgate-impl"]
