[package]
name = "twz-rt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tick_counter = "0.4"
twizzler-rt-abi = "0.99"
thiserror = "2.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3" }
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
dynlink = { path = "../../lib/dynlink" }
bitflags = "2.4"
talc = { version = "4.4", default-features = false }
lazy_static = "1.4"
atomic = "0.6"
elf = "0.7"
static_assertions = "1.1"
monitor-api = { path = "../monitor-api" }
secgate = { path = "../../lib/secgate" }
stable-vec = "0.4.1"
lru = "0.13.0"
paste = "1"
printf-compat = { version = "0.1", default-features = false }
naming-core = { path = "../../lib/naming/naming-core" }
pager-dynamic = { path = "../../lib/pager/pager-dynamic" }
backtracer_core = "*"

[profile.release]
debug = true
