[package]
name = "twz-rt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tick_counter = { workspace = true }
twizzler-rt-abi = "0.99"
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true }
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
dynlink = { workspace = true }
bitflags = "2.4"
talc = { workspace = true }
lazy_static = { workspace = true }
atomic = { workspace = true }
elf = { workspace = true }
static_assertions = { workspace = true }
monitor-api = { workspace = true }
secgate = { workspace = true }
stable-vec = { workspace = true }
lru = { workspace = true }
paste = "1"
printf-compat = { workspace = true }
naming-core = { workspace = true }
pager-dynamic = { workspace = true }
ferroc = { workspace = true, features = ["global"] }

[profile.release]
debug = true
