[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twizzler-abi = { path = "../../lib/twizzler-abi", features = ["runtime"] }
dynlink = { path = "../dynlink" }

[package.metadata]
twizzler-build = "static"
