[package]
name = "dynlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7"
twizzler-abi = { path = "../../lib/twizzler-abi", features = ["runtime"] }
tracing = "0.1"
twizzler-object = { path = "../../lib/twizzler-object" }
thiserror = "1.0"
talc = { version = "3.0", default-features = false }
anyhow = "1.0"
petgraph = "0.6"
humansize = "2.1"
bitflags = "2.4"
