[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor = { path = "../monitor" }
tracing = "0.1"
tracing-subscriber = "0.3"
twizzler-abi = { path = "../../lib/twizzler-abi", default-features = false }
logboi = { path = "../logboi" }
small_ctor = {version = "*", default-features = false }
